[package]
name = "tcp_tester_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros", "io-util"] }
